add more javascript to give varied results based on survey results.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
-#Ecuador {
+#ecuador {
   display: none;
 }
-#Caribbean {
+#caribbean {
   display: none;
 }
-#Ireland {
+#ireland {
   display: none;
 }
 button {
