--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+p {
+  font-size: 1.875em; /* 30px/16=1.875em */
+}
+button {
+  margin-top: 30px;
+  border-width: medium;
+  background-color: blue;
+  color: white;
+}
+
 #ecuador {
   display: none;
 }
@@ -9,10 +19,4 @@
 }
 .message {
   display: none;
-}
-button {
-  margin-top: 30px;
-  border-width: medium;
-  background-color: blue;
-  color: white;
 }
